err/flask-go.err
Listing '.'...
Listing './bin'...
Compiling './bin/flask-go.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Script-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_go'...
Listing './lib/python3.5/site-packages/flask_go/app_template'...
Compiling './lib/python3.5/site-packages/flask_go/app_template/views.py'...
***   File "./lib/python3.5/site-packages/flask_go/app_template/views.py", line 6
    %(app_name)s = Blueprint('%(app_name)s', __name__)
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_go/commands'...
Compiling './lib/python3.5/site-packages/flask_go/commands/startapp.py'...
***   File "./lib/python3.5/site-packages/flask_go/commands/startapp.py", line 28
    print "create projcet [%s] in direct: %s" % (app_name, directory)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flask_go/commands/startproject.py'...
***   File "./lib/python3.5/site-packages/flask_go/commands/startproject.py", line 28
    print "create projcet [%s] in direct: %s" % (proj_name, directory)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flask_go/management.py'...
***   File "./lib/python3.5/site-packages/flask_go/management.py", line 22
    print "Unknow command: %r" % name
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/flask_go/project_template'...
Compiling './lib/python3.5/site-packages/flask_go/project_template/manage.py'...
***   File "./lib/python3.5/site-packages/flask_go/project_template/manage.py", line 5
    from %(project_name)s import create_app
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_go/project_template/project_name'...
Compiling './lib/python3.5/site-packages/flask_go/project_template/project_name/__init__.py'...
***   File "./lib/python3.5/site-packages/flask_go/project_template/project_name/__init__.py", line 2
    from .%(project_name)s import *
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_go/project_template/project_name/apps'...
Listing './lib/python3.5/site-packages/flask_go/project_template/project_name/configs'...
Compiling './lib/python3.5/site-packages/flask_go/project_template/project_name/project_name.py'...
***   File "./lib/python3.5/site-packages/flask_go/project_template/project_name/project_name.py", line 23
    print "blueprint: %s, prefix: %s" % (bp.name, prefix)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_go-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/flask_script'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
